# MueveCancun

./: .agent_context  .cursorrules  .env.example  .gitattributes  .gitignore  .gitmodules  .merge_file_uosATb  .npmrc  AGENTS.md  ARCH_MANIFEST.md  BACKEND_TASKS.md  BITACORA_APRENDIZAJE.md  CERTIFICATION.md  CLAUDE.md  COLORS_IMPLEMENTATION.md  COMMUNICATION.md  CROWDSOURCING_COMPLETE.md  DEPLOY.md  DEPLOYMENT_READY.md  DEPLOY_GUIDE.md  DEPLOY_NOW.md  Dockerfile  IndexScript.js  JULES_MISSION.md  MainLayoutScript.js  Makefile  MueveCancun_Roadmap_2026.docx  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  TECH_DEBT.md  TRANSFORMATION_SUMMARY.md  astro.config.mjs  astro.config.ts  changes.diff  cleanup_repo.ps1  cleanup_repo.sh  compose.yaml  debug_json.js  (+79 more)
.Jules/: palette.md  speedy.md
.agent/: EXPANDED_ROADMAP.md  MASTER_ROADMAP.md  PROMPT_FOR_JULES.md  SPRINT1_SUMMARY.md  SSG_ISLANDS_STRATEGY.md  TODO.md  ULTIMATE_HANDOVER_PROMPT.md  jules_context_brief.md  phase1_frontend_prep.md
.astro/: content.d.ts  data-store.json  settings.json
.github/: dependabot.yml
.jules/: bolt.md  palette.md  synapse.md
MOVICUN_3.0/: index.html  package-lock.json  package.json
_RESGUARDO/: RESCUE_ARCH.md
api/: .env.example  Cargo.toml
api/migrations/: 0001_init.sql
api/src/: main.rs  models.rs
api/src/handlers/: deliveries.rs  health.rs  mod.rs  tracking.rs
benchmarks/: gps.cjs
cancunmueve-astro/: package-lock.json  package.json
docs/: AGENT_TRACKING.md  ARCHITECTURE.md  BACKEND_TASKS.md  BRIDGE_WASM.md  CATALOG_UPDATE.md  CLAUDE_ANALYSIS.md  CURRENT_STATE.md  E2E_AUDIT_REPORT.md  NEXUS_PROTOCOL.md  PROJECT_STATUS.md  PR_TRIAGE_2026-03-28.md  PWA_ROADMAP_EN_ES.md  RESEARCH_NOTES.md  ROADMAP_2026.md  SEGUIMIENTO_AGENTES.md  SUPABASE_MIGRATION.md  TECH_DEBT.md  TRACKING.md  astro_migration_plan.md
e2e/: base-map-offline.spec.ts  dynamic_card_styles.spec.ts  interactive.spec.ts  mobile-critical.spec.ts  mobile-pages.spec.ts  navigation.spec.ts  tracking-mobile.spec.ts  verify_map.spec.ts  verify_system.spec.ts  visual_audit.spec.ts
jules_session_15744161379540395713 (1)/: .cursorrules  .env.example  README.md  package-lock.json  package.json
public/: coordinates.json  manifest.json  register-sw.js  robots.txt  router.worker.js  sw.js
rust-wasm/: Cargo.toml  test_data.json
rust-wasm/carbon-calculator/: Cargo.toml
rust-wasm/carbon-calculator/src/: lib.rs
rust-wasm/eta-engine/: Cargo.toml
rust-wasm/eta-engine/src/: lib.rs
rust-wasm/route-calculator/: Cargo.toml
rust-wasm/route-calculator/src/: lib.rs  lib.rs.patch
rust-wasm/route-calculator/src/rust_data/: embedded_routes.json
rust-wasm/spatial-index/: Cargo.toml
rust-wasm/spatial-index/src/: lib.rs
scripts/: add-route-colors.ts  audit-reality.ts  audit-survival.sh  build-wasm.mjs  build-wasm.ts  build_render.sh  check-astro-config.mjs  check-css-pipeline.mjs  check-wasm.cjs  create-github-labels.sh  e2e-smoke.mjs  extract_legacy_data.cjs  fix-hubs.ts  fix_prerender.cjs  generate-build-info.mjs  generate-roadmap-doc.mjs  generate-roadmap-doc.ts  generate_og_image.cjs  generate_og_image.mjs  generate_og_image.py  generate_og_image.ts  geocode-stops.mjs  geocode-stops.ts  import-saturmex.ts  jules-api.mjs  jules-ci-fix.mjs  jules-delegate.mjs  jules-issue.mjs  jules-pr.mjs  lib_dump.rs  merge-routes.mjs  (+23 more)
superagent/: README.md  __init__.py  main.py  pyproject.toml
superagent/ADR/: 0001-unification-of-agent-frameworks.md
superagent/planner/: __init__.py  llm_router.py  orchestrator.py
superagent/skills/: example_skill.md
superagent/tests/: test_superagent.py
superagent/tools/: __init__.py  base.py  browser.py  fs.py  screenshot.py  shell.py
(+720 files in other folders)
