[project]
name = "muevecancun-superagent"
version = "0.1.0"
description = "Local permission-aware SuperAgent prototype"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.34,<1"]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["superagent", "superagent.planner", "superagent.tools"]
package-dir = {superagent = "."}
