[package]
name = "eta-engine"
version = "0.1.0"
edition = "2021"
description = "Real-time ETA estimation engine for Cancún transit — WASM native"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
shared-types = { path = "../shared-types" }
