[package]
name = "route-calculator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
geo = "0.28"
geojson = "0.24"
petgraph = "0.6"
shared-types = { path = "../shared-types" }
