[package]
name = "spatial-index"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
rstar = "0.12"
shared-types = { path = "../shared-types" }
once_cell = "1.21.4"
