[package]
name = "spatial-index"
version = "0.1.0"
authors = ["Julian Alexander Juarez Alvarado"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
shared-types = { path = "../shared-types" }
once_cell = "1.18"
rstar = "0.11"
